# tcboxer

./: .gitignore  MANIFEST.in  Makefile  README.md  kaboxer  kaboxer.1.md  kaboxer.py  kaboxer.sample.yaml  kaboxer.yaml.5.md  kbxbuilder  kbxbuilder.1.md  kbxbuilder.apps.yaml.5.md  kbxbuilder.config.yaml.5.md  setup.cfg  setup.py  tox.ini
debian/: changelog  control  copyright  dirs  install  kaboxer.examples  kaboxer.install  kaboxer.manpages  kali-ci.yml  postinst  rules
debian/tests/: control  run-tests
dh-kaboxer/: Makefile  dh_kaboxer  kaboxer.pm  postinst-kaboxer  postrm-kaboxer  prerm-kaboxer
dh-kaboxer/Buildsystem/: kaboxer.pm
dh-kaboxer/Sequence/: kaboxer.pm
gitlab-ci/: build-docker-image.yml
hello-kbx/: hello  hello-allinone.Dockerfile  hello-allinone.kaboxer.yaml  hello-cli.Dockerfile  hello-cli.kaboxer.yaml  hello-gui.Dockerfile  hello-gui.kaboxer.yaml  hello-server.Dockerfile  hello-server.kaboxer.yaml  kaboxer-hello-cli.desktop
hello-kbx/debian/: changelog  control  copyright  dirs  hello-allinone-kbx.install  hello-cli-kbx.install  hello-gui-kbx.install  hello-server-kbx.install  hello-server-kbx.service  rules
kaboxer/: __init__.py  builder.py
kbx-hello/: Dockerfile.cli  Dockerfile.gui  Dockerfile.server  kbx-hello  kbx-hello-allinone-cli.desktop  kbx-hello-allinone-gui.desktop  kbx-hello-allinone-server.desktop  kbx-hello-allinone.Dockerfile  kbx-hello-allinone.kaboxer.yaml  kbx-hello-cli.Dockerfile  kbx-hello-cli.desktop  kbx-hello-cli.kaboxer.yaml  kbx-hello-gui.Dockerfile  kbx-hello-gui.desktop  kbx-hello-gui.kaboxer.yaml  kbx-hello-server.Dockerfile  kbx-hello-server.kaboxer.yaml  kbx-hello-wrapper
kbx-hello/debian/: README.Debian  README.source  changelog  control  copyright  dirs  kbx-hello-allinone.install  kbx-hello-allinone.kaboxer.yaml  kbx-hello-allinone.lintian-overrides  kbx-hello-allinone.service  kbx-hello-cli.Dockerfile  kbx-hello-cli.Kaboxerfile  kbx-hello-cli.install  kbx-hello-cli.kaboxer.yaml  kbx-hello-cli.lintian-overrides  kbx-hello-cli.sudoers  kbx-hello-gui.Dockerfile  kbx-hello-gui.Kaboxerfile  kbx-hello-gui.install  kbx-hello-gui.kaboxer.yaml  kbx-hello-gui.lintian-overrides  kbx-hello-gui.sudoers  kbx-hello-server.Kaboxerfile  kbx-hello-server.install  kbx-hello-server.kaboxer.yaml  kbx-hello-server.lintian-overrides  kbx-hello-server.postinst  kbx-hello-server.postrm  kbx-hello-server.service  rules
man/: kaboxer.1.md  kaboxer.yaml.5.md  kbxbuilder.1.md  kbxbuilder.apps.yaml.5.md  kbxbuilder.config.yaml.5.md
sudoers.d/: kaboxer
tests/: kaboxer_tests.py  unit_tests.py
(+26 files in other folders)
