[metadata]
name = kaboxer
version = file:VERSION

[options]
packages = kaboxer
install_requires =
  docker
  dockerpty
  GitPython
  Jinja2
  packaging
  prompt_toolkit
  requests
  tabulate
  yaml

[options.entry_points]
console_scripts = 
  kaboxer = kaboxer:main
  kbxbuilder = kaboxer.builder:main

[options.data_files]
share/man/man1 =
  kaboxer.1
  kbxbuilder.1
share/man/man5 =
  kaboxer.yaml.5
  kbxbuilder.apps.yaml.5
  kbxbuilder.config.yaml.5
/etc/sudoers.d = sudoers.d/kaboxer
bin = dh-kaboxer/dh_kaboxer
share/perl5/Debian/Debhelper/Buildsystem = dh-kaboxer/Buildsystem/kaboxer.pm
share/perl5/Debian/Debhelper/Sequence = dh-kaboxer/Sequence/kaboxer.pm
share/debhelper/autoscripts =
  dh-kaboxer/postinst-kaboxer
  dh-kaboxer/postrm-kaboxer
