[metadata]
name = kaboxer
version = file:VERSION

[options]
packages = kaboxer
install_requires =
  docker
  dockerpty
  GitPython
  Jinja2
  packaging
  prompt_toolkit
  requests
  tabulate
  yaml

[options.entry_points]
console_scripts = 
  kaboxer = kaboxer:main
  kbxbuilder = kaboxer.builder:main

[options.data_files]
share/man/man1 =
  man/kaboxer.1
  man/kbxbuilder.1
share/man/man5 =
  man/kaboxer.yaml.5
  man/kbxbuilder.apps.yaml.5
  man/kbxbuilder.config.yaml.5
/etc/sudoers.d = sudoers.d/kaboxer
