[metadata]
name = kaboxer
version = file:VERSION
url = https://gitlab.com/kalilinux/tools/kaboxer
description = A framework for deploying applications to run in containers
long_description = file:README.md
maintainer = Kali Developers
maintainer_email = devel@kali.org
license_file = LICENSE
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Perl
  Operating System :: POSIX :: Linux
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Development Status :: 4 - Beta
  Topic :: System :: Software Distribution
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
packages = kaboxer
install_requires =
  docker
  dockerpty
  GitPython
  Jinja2
  packaging
  prompt_toolkit
  PyYAML
  requests
  tabulate

[options.entry_points]
console_scripts = 
  kaboxer = kaboxer:main
  kbxbuilder = kaboxer.builder:main

[options.data_files]
share/man/man1 =
  man/kaboxer.1
  man/kbxbuilder.1
share/man/man5 =
  man/kaboxer.yaml.5
  man/kbxbuilder.apps.yaml.5
  man/kbxbuilder.config.yaml.5
/etc/sudoers.d = sudoers.d/kaboxer
